--- a/main.tex
+++ b/main.tex
@@ -69,8 +69,14 @@
 
 % Información sobre los autores.
 \author{Agustin Miguel Payaslian (\#96.885)\\
-\vspace{5mm}
 \texttt{agustin.payaslian@gmail.com}\\
+\\
+Augusto Arturi (\#)\\
+\texttt{@gmail.com}\\
+\\
+Estanislao Ledesma (\#)\\
+\texttt{@gmail.com}\\
+\\
 \vspace{5mm}
 \normalsize{2do. Cuatrimestre de 2018}\\
 \vspace{5mm}
@@ -99,17 +105,58 @@
 
 \tableofcontents
 
+\newpage
 
 
 \begin{abstract}
 	En el siguiente trabajo practico se explicaran mediantes dos casos practicos la utilizacion de algoritmos y metodologias de machine learning aplicadas a problemas de la seguridad informatica.
 \end{abstract}  
 
-
 \newpage
+
+\section{Introduccion}
+
+Se cree que las tecnologías de Machine Learning pueden aportar mucho valor al mundo de la seguridad. Una de las aplicaciones directas conocidas de estas técnicas es la \textbf{detección de anomalías de tráfico de red}. Esta hace referencia a comportamientos no esperables de acuerdo al funcionamiento habitual de la red. Por ejemplo, situaciones en las que se genere gran cantidad de tráfico repentino o muy diferente al habitual. El arte de estas técnicas consiste precisamente en determinar qué es diferente, habitual y disponer de los mecanismos adecuados para detectarlo. 
+
+\subsection{Random Forest}
+Es un algoritmo de Machine Learning de aprendizaje supervisado. Es una combinación de árboles predictores tal que cada árbol depende de los valores de un vector aleatorio probado independientemente y con la misma distribución para cada uno de estos. Se caracteriza por:
+\begin{itemize}
+\item Ser uno de los algoritmos de aprendizaje más certeros que hay disponible. Para un set de datos lo suficientemente grande produce un clasificador muy certero. 
+\item Correr eficientemente en bases de datos grandes.
+\item Manejar cientos de variables de entrada sin excluir ninguna.
+\item Dar estimaciones de qué variables son importantes en la clasificación.
+\item Tener un método eficaz para estimar datos perdidos y mantener la exactitud cuando una gran proporción de los datos está perdida.
+\item Sirve tanto para problemas de clasificación como de regresion
+\item Computar las proximidades entre los pares de casos que pueden usarse en los grupos, localizando valores atípicos, o (ascendiendo) dando vistas interesantes de los datos.
+\item Ofrecer un método experimental para detectar las interacciones de las variables.
+\end{itemize}
+
+
+\textbf{Bagging} en general implica aplicar el mismo clasificador n veces y luego promediar sus resultados para el obtener el resultado final. El problema es que aplicar el mismo clasificador n veces al mismo set de datos dara n veces el mismo resultado. Es por esto que bagging siempre se usa en conjunto con bootstrapping. \\
+
+\textbf{Bootstrapping} consiste en tomar una muestra del set de entrenamiento del mismo tamaño del set de entrenamiento pero con reemplazo. Es decir que un dato puede estar varias veces en la muestra. Como cada clasificador no ve el total de registros del set de entrenamiento la técnica de bagging disminuye notablemente las posibilidades de caer en overfitting, ya que ninguno de los n clasificadores individuales puede sobreajustar al set de entrenamiento completo.
+
+Bagging puede usarse con cualquier algoritmo de clasificación o regresión pero es muy popular con árboles de decisión, en donde da origen al algoritmo de Random Forests, el cual es uno de los algoritmos más populares en clasificación porque suele predecir buenos resultados para la mayoría de los set de datos, lo cual hemos comprobado a lo largo de este trabajo práctico.
+
+\medskip
+
+En definitiva un RF es un conjunto de árboles de decisión en donde cada árbol usa un bootstrap del set de entrenamiento y un cierto conjunto de atributos tomados al azar. Los RF tienen, en general, dos hiper parámetros: la cantidad de árboles a crear y la cantidad de atributos de cada uno. 
+
+El primero (cantidad de árboles) no es muy complejo ya que en general a mayor cantidad de árboles mejor funciona el ensamble pero hay que tener en cuenta que llegado un punto la mejora es prácticamente inapreciable y perdemos performance, por esto en general usaremos una cantidad de árboles que podamos manejar y que nos den el mejor resultado posible o bien que no tengan una diferencia apreciable con el uso de mayor cantidad de árboles.
+
+\begin{figure}[!htp]
+\centering
+\includegraphics[scale=0.6]{Wireshark/OOB_1.png} 
+\caption{}
+\end{figure}
+
+En la figura 5  observamos cómo a partir de los 20 árboles el error se va prácticamente a cero y la mejora a más árboles es inapreciable.
+
+El segundo hiper-parámetro: la cantidad de atributos por árbol es el mas critico y necesita ser encontrado mediante la toma de subconjuntos de atributos tomados al azar lo cual ayuda a determinar cuales son los atributos que realmente importan para la clasificación promediando su precisión. 
+
 \section{Primer caso}
 En este primer ejemplo práctico se utilizo el dataset \textbf{KDD99}. Este dataset fue creado para el “Third International Knowledge Discovery and Data Mining Tools Competition”.El objetivo de esta competencia era construir un detector de intrusiones de la red (network intrusion detector), es decir un modelo predictivo que sea capaz de distinguir entre conexiones “malas” y conexiones ”buenas”. Este contiene una gran cantidad de tráfico , dentro del cual se encuentran intrusiones simuladas en un ambiente de red militar.
-Cada conexión tiene una categoría, ya sea normal, o el nombre específico del ataque
+Cada conexión tiene una categoría, ya sea normal, o el nombre específico del ataque.\\
 
 
 Los ataques se encuentran dentro de estas categorías:
@@ -267,7 +314,7 @@ La solucion que se plantea en este primer caso implica analizar  el tráfico que
 Out: 0.01069792579667661
 \end{lstlisting}
 
-Finalmente para terminar el preprocesado se acomodo la informacion de una forma tal que le sea mas util a nuestro algoritmo para eso usamos funciones de normalizacion de los datos y funciones de \textit{one hot encoding} la cual consiste endividir el atributo en tantas columnas como valores posibles puede tener y usarcada columna como un dato binario indicando si el atributo toma o no dicho valor.
+Finalmente para terminar el preprocesado se acomodo la informacion de una forma tal que le sea mas util a nuestro algoritmo para eso usamos funciones de normalizacion de los datos y funciones de \textit{one hot encoding} la cual consiste endividir el atributo en tantas columnas como valores posibles puede tener y usar cada columna como un dato binario indicando si el atributo toma o no dicho valor.
 
 \subsection{Entrenamiento}
 Se trabajo con un set de entrenamiento y un set de test. La
@@ -278,13 +325,12 @@ saber si el modelo fue capaz de generalizar correctamente. Para poder validar
 el modelo necesitamos dividir el set de entrenamiento original en dos: un set de
 entrenamiento y un set de validación. La idea es entrenar el modelo con el set
 de entrenamiento y luego probarlo con el set de validación a efectos de encontrar
-los mejores hiper-parámetros pertenecientes propios a cada algoritmo. El set de validación utilizado fue de un 25\% del set de entrenamiento.
+los mejores hiper-parámetros pertenecientes propios a cada algoritmo. El set de validación utilizado fue de un 25\% del set de entrenamiento.\\
 
-\medskip
 
 Utilizamos el algoritmo de \textbf{random forest} para realizar la predicción. Para ello con la información obtenida del archivo “10perfect” entrenamos el algoritmo y luego predecimos los ataques para el archivo “corrected”. Para verificar la eficacia del algoritmo comparamos los valores obtenidos obtenidos por la predicción con los que ya se encontraban en el archivo. Al realizar la comparación obtuvimos el resultado siguiente:
-\medskip
-\Large Accuracy: 0.9946986695597958
+
+\textbf{Accuracy: 0.9946986695597958}
 
 
 \medskip
@@ -301,46 +347,11 @@ Los features que mas importaron a la hora de la prediccion fueron los siguientes
 
 Es decir, que a partir de la figura anterior se puede interpretar que features aportan mas valor para generar el arbol de decision que clasifique al random forest.
 
-\subsection{Random Forest}
-Es un algoritmo de Machine Learning de aprendizaje supervisado. Es una combinación de árboles predictores tal que cada árbol depende de los valores de un vector aleatorio probado independientemente y con la misma distribución para cada uno de estos. Se caracteriza por:
-\begin{itemize}
-\item Ser uno de los algoritmos de aprendizaje más certeros que hay disponible. Para un set de datos lo suficientemente grande produce un clasificador muy certero. 
-\item Correr eficientemente en bases de datos grandes.
-\item Manejar cientos de variables de entrada sin excluir ninguna.
-\item Dar estimaciones de qué variables son importantes en la clasificación.
-\item Tener un método eficaz para estimar datos perdidos y mantener la exactitud cuando una gran proporción de los datos está perdida.
-\item Sirve tanto para problemas de clasificación como de regresion
-\item Computar las proximidades entre los pares de casos que pueden usarse en los grupos, localizando valores atípicos, o (ascendiendo) dando vistas interesantes de los datos.
-\item Ofrecer un método experimental para detectar las interacciones de las variables.
-\end{itemize}
 
-
-\textbf{Bagging} en general implica aplicar el mismo clasificador n veces y luego promediar sus resultados para el obtener el resultado final. El problema es que aplicar el mismo clasificador n veces al mismo set de datos dara n veces el mismo resultado. Es por esto que bagging siempre se usa en conjunto con bootstrapping. 
-
-\textbf{Bootstrapping} consiste en tomar una muestra del set de entrenamiento del mismo tamaño del set de entrenamiento pero con reemplazo. Es decir que un dato puede estar varias veces en la muestra. Como cada clasificador no ve el total de registros del set de entrenamiento la técnica de bagging disminuye notablemente las posibilidades de caer en overfitting, ya que ninguno de los n clasificadores individuales puede sobreajustar al set de entrenamiento completo.
-
-Bagging puede usarse con cualquier algoritmo de clasificación o regresión pero es muy popular con árboles de decisión, en donde da origen al algoritmo de Random Forests, el cual es uno de los algoritmos más populares en clasificación porque suele predecir buenos resultados para la mayoría de los set de datos, lo cual hemos comprobado a lo largo de este trabajo práctico.
-
-\medskip
-
-En definitiva un RF es un conjunto de árboles de decisión en donde cada árbol usa un bootstrap del set de entrenamiento y un cierto conjunto de atributos tomados al azar. Los RF tienen, en general, dos hiper parámetros: la cantidad de árboles a crear y la cantidad de atributos de cada uno. 
-
-El primero (cantidad de árboles) no es muy complejo ya que en general a mayor cantidad de árboles mejor funciona el ensamble pero hay que tener en cuenta que llegado un punto la mejora es prácticamente inapreciable y perdemos performance, por esto en general usaremos una cantidad de árboles que podamos manejar y que nos den el mejor resultado posible o bien que no tengan una diferencia apreciable con el uso de mayor cantidad de árboles.
-
-\begin{figure}[!htp]
-\centering
-\includegraphics[scale=0.6]{Wireshark/OOB_1.png} 
-\caption{}
-\end{figure}
-
-En la figura 5  observamos cómo a partir de los 20 árboles el error se va prácticamente a cero y la mejora a más árboles es inapreciable.
-
-El segundo hiper-parámetro: la cantidad de atributos por árbol es el mas critico y necesita ser encontrado mediante la toma de subconjuntos de atributos tomados al azar lo cual ayuda a determinar cuales son los atributos que realmente importan para la clasificación promediando su precisión. 
 
 \newpage
 \section{Segundo caso}
 
-Se cree que las tecnologías de Machine Learning pueden aportar mucho valor al mundo de la seguridad. Una de las aplicaciones directas conocidas de estas técnicas es la \textbf{detección de anomalías de tráfico de red}. Esta hace referencia a comportamientos no esperables de acuerdo al funcionamiento habitual de la red. Por ejemplo, situaciones en las que se genere gran cantidad de tráfico repentino o muy diferente al habitual. El arte de estas técnicas consiste precisamente en determinar qué es diferente, habitual y disponer de los mecanismos adecuados para detectarlo. 
 
 En este segundo ejemplo práctico, se decidió trabajar sobre otro dataset, esta vez con un enfoque más realista el cual implica realizar un estudio previo de los datos y el problema para luego entrenar al algoritmo.
 
@@ -463,20 +474,20 @@ UDP traffic\\
 \end{table}
 
 
-\section{Solucion en machine learning por Random Forest}
+\subsection{Entrenamiento}
 
-Basándose en esta simple observación definida anteriormente, se centra el funcionamiento del algoritmo en la creación de un feature o característica que cuenta el número de flujos en un intervalo de tiempo parametrizable en segundos, que desde una misma IP origen se conectan a diferentes IP destino públicas, con tráfico de un determinado protocolo y usando un cierto puerto destino. Lo que se espera es que para el tráfico normal este valor sea bajo y se consideran anomalías aquellos que tengan valores altos. Esto se trata tan sólo de un simple ejemplo y se podrían definir más características. De hecho, definir características acertadas (además de la adecuada elección del dataset) es el arte que puede llevar a que los algoritmos de aprendizaje sirvan realmente en el mundo real.
+Basándose en esta simple observación definida anteriormente, se centra el funcionamiento del algoritmo en la creación de un feature o característica que cuenta el número de flujos en un intervalo de tiempo parametrizable en segundos, que desde una misma IP origen se conectan a diferentes IP destino públicas, con tráfico de un determinado protocolo y usando un cierto puerto destino. Lo que se espera es que para el tráfico normal este valor sea bajo y se consideran anomalías aquellos que tengan valores altos. Esto se trata tan sólo de un simple ejemplo y se podrían definir más características. De hecho, definir características acertadas (además de la adecuada elección del dataset) es el arte que puede llevar a que los algoritmos de aprendizaje sirvan realmente en el mundo real.\\
 
-El primer desafío que se encontró en comparación del caso anterior, fue en la propia generación de los datos, esta vez solamente teníamos un archivo .pcap con el tráfico de red, el cual a su vez era escaso, ya que comentamos de la Figura, solo tenía 6033 líneas. De nuestro estudio en la temática sabemos lo importante que es tener datos de valor, y cuanto más grande sea el dataset aún mejor ya que brindarle más información al algoritmo implica más robustez y menos overfit, es decir, que la solución se vuelva muy particular y deje de generalizar para otro tipo de casos, lo cual queremos evitar. Por ende para ampliar el set de datos, se tomaron otros ejemplos de tráfico de ransomware, donde se detectó que el patrón seguía siendo el mismo, a su vez tener en el mismo dataset infecciones de fechas temporales distintas, con IPs (origen y destino) distintas de ataque, e incluso puertos distintos resulta valioso.
+El primer desafío que se encontró en comparación del caso anterior, fue en la propia generación de los datos, esta vez solamente teníamos un archivo .pcap con el tráfico de red, el cual a su vez era escaso, ya que comentamos de la Figura, solo tenía 6033 líneas. De nuestro estudio en la temática sabemos lo importante que es tener datos de valor, y cuanto más grande sea el dataset aún mejor ya que brindarle más información al algoritmo implica más robustez y menos overfit, es decir, que la solución se vuelva muy particular y deje de generalizar para otro tipo de casos, lo cual queremos evitar. Por ende para ampliar el set de datos, se tomaron otros ejemplos de tráfico de ransomware, donde se detectó que el patrón seguía siendo el mismo, a su vez tener en el mismo dataset infecciones de fechas temporales distintas, con IPs (origen y destino) distintas de ataque, e incluso puertos distintos resulta valioso.\\
 
-A su vez también debemos brindarle a este información de tráfico que sea “normal” sin malware, el cual es extremadamente útil para enfatizar cuando existe o no una anomalía, para generarlo lo hicimos con una de los propias computadoras de los integrantes del grupo capturando paquetes mediante Wireshark.
+A su vez también debemos brindarle a este información de tráfico que sea “normal” sin malware, el cual es extremadamente útil para enfatizar cuando existe o no una anomalía, para generarlo lo hicimos con una de los propias computadoras de los integrantes del grupo capturando paquetes mediante Wireshark.\\
 
 
 \medskip
 
-Realizado esto se prosiguió generando un dataframe que tenga el contenido de toda la información recolectada, para eso utilizamos \textbf{pandas} la cual es una librería de python para el análisis y creación de estructuras de datos, herramienta muy utilizada en el ámbito de machine learning. 
+Realizado esto se prosiguió generando un dataframe que tenga el contenido de toda la información recolectada, para eso utilizamos \textbf{pandas} la cual es una librería de python para el análisis y creación de estructuras de datos, herramienta muy utilizada en el ámbito de machine learning. \\
 
-A continuación, se creó un nuevo feature (columna) para categorizar al tráfico si este era como un ataque o como normal, esto fue realizado teniendo en cuenta todo el análisis explicado anteriormente. Este es muy necesario ya que será nuestro parámetro para más tarde establecer las comparaciones con las predicciones que hagamos a partir de nuestro entrenamiento con \textbf{Random Forest}.
+A continuación, se creó un nuevo feature (columna) para categorizar al tráfico si este era como un ataque o como normal, esto fue realizado teniendo en cuenta todo el análisis explicado anteriormente. Este es muy necesario ya que será nuestro parámetro para más tarde establecer las comparaciones con las predicciones que hagamos a partir de nuestro entrenamiento con \textbf{Random Forest}.\\
 
 \medskip
 El segundo paso fundamental para resolver el problema, fue trabajar la creación de un nuevo dataframe que contenga la información de valor en términos de flujos de datos, por esta razón es esencial el preprocesamiento del dataset, ya que cuando el algoritmo fue entrenado sin procesamiento alguno las predicciones acertadas fueron muy bajas. Para esto se decidio agrupar bajo las siguientes condiciones, las cuales fueron detectadas con el análisis del Ransomware:
@@ -543,12 +554,16 @@ A continuación una serie de ejemplos de árboles de decisión generados por nue
 \label{fig:fig}
 \end{figure}
 
-Finalmente se logró clasificar por medio de este algoritmo a los datos con una precisión del \Large{0.9925373134328358}
+Finalmente se logró clasificar por medio de este algoritmo a los datos con una precisión del \textbf{0.9925373134328358}
 
 \medskip
 
 \normalsize Para probar estos resultados se dividió nuestro set de datos en 60\% de entrenamiento y 40\% de prueba. Donde se encontró que las anomalías fueron detectadas todas correctamente lo cual era el objetivo principal de nuestro problema.
 
+
+\section{Conclusion}
+
+Los algoritmos de machine learning pueden ser herramientas muy utiles para utilizar en el area de seguridad informatica. En este trabajo se demostro que estos algoritmos pueden servir para detectar ataques que afectan a la disponibilidad del servicio (DOS), como tambien para los que afectan la integridad de los datos (Ransomware). Queda para futuros trabajos investigar en que otros pilares de la seguridad informatica se pueden usar estas herramientas.
 \newpage
 
 
@@ -558,6 +573,9 @@ Finalmente se logró clasificar por medio de este algoritmo a los datos con una 
 \bibitem {latexcompanion} https://scikit-learn.org/
 
 \bibitem {latexcompanion} https://www.stat.berkeley.edu/\~breiman/RandomForests/cc\_home.html
+
+\bibitem {latexcompanion} https://kdd.ics.uci.edu/databases/kddcup99/task.html
+
 
 \bibitem {latexcompanion} Apunte Luis Argerich 75.06 Organizacion de Datos - FIUBA
 \end{thebibliography}
