cambios al tex file

--- a/main.tex
+++ b/main.tex
@@ -71,11 +71,11 @@
 \author{Agustin Miguel Payaslian (\#96.885)\\
 \texttt{agustin.payaslian@gmail.com}\\
 \\
-Augusto Arturi (\#)\\
-\texttt{@gmail.com}\\
+Augusto Arturi (\#97498)\\
+\texttt{turitoh@gmail.com}\\
 \\
-Estanislao Ledesma (\#)\\
-\texttt{@gmail.com}\\
+Estanislao Ledesma (\#96622)\\
+\texttt{estanislaomledesma@gmail.com}\\
 \\
 \vspace{5mm}
 \normalsize{2do. Cuatrimestre de 2018}\\
@@ -560,11 +560,21 @@ Finalmente se logró clasificar por medio de este algoritmo a los datos con una 
 
 \normalsize Para probar estos resultados se dividió nuestro set de datos en 60\% de entrenamiento y 40\% de prueba. Donde se encontró que las anomalías fueron detectadas todas correctamente lo cual era el objetivo principal de nuestro problema.
 
+\section{Repositorio}
+Link al repositorio: \textbf{https://github.com/AugustoArturi/Anomalias}
+
+Archivos:
+\begin{itemize}
+\item{Detail\_ML\_Solution.ipynb, \textbf{caso 1}}
+\item{Ransomware.ipynb, \textbf{caso 2}}
+\end{itemize}
 
 \section{Conclusion}
 
 Los algoritmos de machine learning pueden ser herramientas muy utiles para utilizar en el area de seguridad informatica. En este trabajo se demostro que estos algoritmos pueden servir para detectar ataques que afectan a la disponibilidad del servicio (DOS), como tambien para los que afectan la integridad de los datos (Ransomware). Queda para futuros trabajos investigar en que otros pilares de la seguridad informatica se pueden usar estas herramientas.
 \newpage
+
+
 
 
 
